--- a/app/views/admin/events/edit.html.erb
+++ b/app/views/admin/events/edit.html.erb
@@ -2,13 +2,15 @@
   <div class="col-sm-12">
     <div class="card-box">
       <h4 class="m-t-0 m-b-30 header-title"><b>Fields validation</b></h4>
+
+      <%= form_for @event, url: admin_event_path(@event), medthod: :post, html: { class: 'form-horizontal group-border-dashed' } do |f| %>
+
       <div class="row">
         <div class="col-md-8">
           <h5><b>Validation type</b></h5>
           <p class="text-muted font-13 m-b-30">
             Your awesome text goes here.
           </p>
-          <%= form_for @event, url: admin_event_path(@event), medthod: :post, html: { class: 'form-horizontal group-border-dashed' } do |f| %>
             <div class="form-group">
               <%= f.label :organizer, class: 'col-sm-3 control-label' %>
               <div class="col-sm-8">
@@ -71,7 +73,7 @@
               <%= f.label :corver_photo, class: 'col-sm-3 control-label' %>
               <div class="col-sm-8">
                 <div class="form-control">
-                  <%= f.file_field :cover, type: :file, required: true %>
+                  <%= f.file_field :cover, type: :file %>
                 </div>
               </div>
             </div>
@@ -80,7 +82,7 @@
               <%= f.label :attachments, class: 'col-sm-3 control-label' %>
               <div class="col-sm-8">
                 <div class="form-control">
-                  <%= f.file_field :attachments, type: :file, required: true, multiple: true %>
+                  <%= f.file_field :attachments, type: :file, multiple: true %>
                 </div>
               </div>
             </div>
@@ -220,13 +222,27 @@
                   addMarker(event.latLng);
                 });
 
+                function setMarkers() {
+                  for (var i = 0; i < markers.length; i++) {
+                    markers[i].setMap(yourMap); //Add the marker to the map
+                  }
+                }
+
+                function hideMarkers() {
+                  for (var i = 0; i < markers.length; i++) {
+                    markers[i].setMap(null); //Remove the marker from the map
+                  }
+                }
+
                 function addMarker(location) {
+                  hideMarkers();
+                  markers = [];
                   var marker = new google.maps.Marker({
                     position: location,
                     map: map,
                     draggable: true
                   });
-                  // markers.push(marker);
+                  markers.push(marker);
                   updateLatLng(location.lat(), location.lng());
 
                   marker.addListener('dragend', function(event) {
@@ -285,7 +301,6 @@
                 $("#event_longitude").val(lng);
               }
             </script>
-          <% end %>
         </div>
         <div class="col-md-4">
           <!-- <h5><b>True multi value</b></h5>
@@ -317,13 +332,14 @@
       <div class="row">
         <div class="col-lg-12 text-right">
           <button id="submitForm" type="submit" class="btn btn-primary waves-effect waves-light">
-            Sumit
+            Update
           </button>
           <button id="resetForm" type="reset" class="btn btn-default waves-effect waves-light m-l-5">
             Cancel
           </button>
         </div>
       </div>
+      <% end %>
     </div>
   </div>
 </div>
@@ -395,15 +411,6 @@
 <!-- Parsleyjs -->
 <%#= javascript_include_tag 'parsleyjs/dist/parsley.min', 'data-turbolinks-track' => true %>
 <script type="text/javascript" src="//cdn.bootcss.com/parsley.js/2.4.3/parsley.min.js"></script>
-<script type="text/javascript">
-  $(document).ready(function() {
-    $('form').parsley();
-
-    $('#submitForm').on('click', function(){
-      $('#new_event').submit();
-    });
-  });
-</script>
 
 <!-- Dropzone js -->
 <%#= javascript_include_tag 'dropzone/dist/dropzone', 'data-turbolinks-track' => true %>
