--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -16,21 +16,17 @@
               <th>Title</th>
               <th>Category</th>
               <th>Organizer</th>
-              <th>From to</th>
               <th>Location</th>
-              <th>Price</th>
             </tr>
           </thead>
           <tbody>
             <% @events.each do |event| %>
               <tr>
-                <td><%= link_to (image_tag event.galleries.try(media: :thumb), width: '100'), edit_admin_event_path(event.id), target: '_self' %></td>
+                <td><%= link_to (image_tag event.galleries.first.try(:media, :thumb), width: '100'), edit_admin_event_path(event.id), target: '_self' %></td>
                 <td><%= link_to event.title, edit_admin_event_path(event.id), target: '_self' %></td>
                 <td><%= event.category.try(:name) %></td>
                 <td><%= "#{event.user.try(:first_name)} #{event.user.try(:last_name)}" %></td>
-                <td><%= event.from_to %></td>
                 <td><%= event.location %></td>
-                <td><%= event.price %></td>
               </tr>
             <% end %>
           </tbody>
