--- a/app/assets/stylesheets/components/font.scss
+++ b/app/assets/stylesheets/components/font.scss
@@ -16,8 +16,8 @@
 
 @font-face {
   font-family: "Ionicons";
-  src: url("../fonts/ionicons.eot?v=1.5.0");
-  src: url("../fonts/ionicons.eot?v=1.5.0#iefix") format("embedded-opentype"), url("../fonts/ionicons.ttf?v=1.5.0") format("truetype"), url("../fonts/ionicons.woff?v=1.5.0") format("woff"), url("../fonts/ionicons.svg?v=1.5.0#Ionicons") format("svg");
+  src: font_url("fonts/ionicons.eot?v=1.5.0");
+  src: font_url("fonts/ionicons.eot?v=1.5.0#iefix") format("embedded-opentype"), font_url("fonts/ionicons.ttf?v=1.5.0") format("truetype"), font_url("fonts/ionicons.woff?v=1.5.0") format("woff"), font_url("fonts/ionicons.svg?v=1.5.0#Ionicons") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -36,4 +36,11 @@
   src: font_url('weathericons-regular-webfont.eot?#iefix') format('embedded-opentype'), font_url('weathericons-regular-webfont.woff2') format('woff2'), font_url('weathericons-regular-webfont.woff') format('woff'), font_url('weathericons-regular-webfont.ttf') format('truetype'), font_url('weathericons-regular-webfont.svg#weather_iconsregular') format('svg');
   font-weight: normal;
   font-style: normal;
+}
+
+@font-face {
+  font-family: 'Glyphicons Halflings';
+
+  src: font_url('glyphicons-halflings-regular.eot');
+  src: font_url('glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), font_url('glyphicons-halflings-regular.woff2') format('woff2'), font_url('glyphicons-halflings-regular.woff') format('woff'), font_url('glyphicons-halflings-regular.ttf') format('truetype'), font_url('glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
