--- a/app/views/admin/events/_section_fields.html.erb
+++ b/app/views/admin/events/_section_fields.html.erb
@@ -1,4 +1,4 @@
-  <div class="section">
+  <div class="nested-fields">
     <hr>
     <div class="form-group">
       <div class="section-wrap clearfix m-b-10">
