--- a/app/views/admin/events/edit.html.erb
+++ b/app/views/admin/events/edit.html.erb
@@ -1,89 +1,46 @@
 <div class="row">
   <div class="col-sm-12">
     <div class="card-box">
-      <h4 class="m-t-0 m-b-30 header-title"><b>Fields validation</b></h4>
+      <!-- <h4 class="m-t-0 m-b-30 header-title"><b>Fields validation</b></h4> -->
 
       <%= form_for @event, url: admin_event_path(@event), medthod: :post, html: { class: 'form-horizontal group-border-dashed' } do |f| %>
-
-      <div class="row">
-        <div class="col-md-8">
-          <h5><b>Validation type</b></h5>
-          <p class="text-muted font-13 m-b-30">
-            Your awesome text goes here.
-          </p>
-            <div class="form-group">
-              <%= f.label :organizer, class: 'col-sm-3 control-label' %>
-              <div class="col-sm-8">
-                <%= f.select :user, options_for_select(@users.collect{ |u| ["#{u.first_name} #{u.last_name}", u.id] }), {}, { class: 'form-control select2' } %>
-              </div>
-            </div>
+        <div class="row">
+          <div class="col-md-7">
+            <h4>Event Details</h4>
 
             <div class="form-group">
-              <%= f.label :category, class: 'col-sm-3 control-label' %>
-              <div class="col-sm-8">
-                <%= f.select :category, options_for_select(@categories.collect{ |c| [c.name, c.id] }), {}, { class: 'form-control select2' } %>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <%= f.label :title, class: 'col-sm-3 control-label' %>
-              <div class="col-sm-8">
+              <%= f.label :title, class: 'col-sm-2 control-label' %>
+              <div class="col-sm-6">
                 <%= f.text_field :title, class: 'form-control', autofocus: true, required: true, placeholder: 'Type something'  %>
               </div>
             </div>
 
             <div class="form-group">
-              <%= f.label :description, class: 'col-sm-3 control-label' %>
-              <div class="col-sm-8">
+              <%= f.label :categories, class: 'col-sm-2 control-label' %>
+              <div class="col-sm-6">
+                <%= f.collection_check_boxes :category, @categories, :id, :name, checked: @category_id do |c| %>
+                  <div class="checkbox">
+                    <%= c.check_box %>
+                    <%= c.label %>
+                  </div>
+                <% end %>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <%= f.label :description, class: 'col-sm-2 control-label' %>
+              <div class="col-sm-6">
                 <%= f.text_area :description, class: 'form-control', rows: 3, required: true %>
               </div>
             </div>
 
-            <div class="row">
-              <div class="col-sm-offset-3 col-sm-8">
-                <a id="add-more-field" href="javascript:;" target="_self">Add more</a>
-              </div>
-            </div>
-
-            <div class="form-group section">
-              <% @event.sections.each do |section| %>
-                <div class="section-wrap clearfix m-b-10">
-                  <%= f.label :section, class: 'col-sm-3 control-label' %>
-                  <div class="col-sm-2 section-name">
-                    <%= f.text_field :section_name, multiple: true, class: 'form-control', placeholder: 'Section name', autofocus: true, required: true, value: section.title %>
-                  </div>
-                  <div class="col-sm-2 section-price">
-                    <%= f.text_field :section_price, multiple: true, class: 'form-control', placeholder: 'Section price', autofocus: true, required: true, "data-parsley-type": "number", "data-parsley-maxlength": "7", value: section.price %>
-                  </div>
-                  <div class="col-sm-2 section-date">
-                    <%= f.text_field :section_date, multiple: true, class: 'form-control event-datepicker', autofocus: true, required: true, placeholder: "dd/mm/yyyy", "date-format": "dd/mm/yyyy", value: section.event_time.strftime('%d/%m/%Y') %>
-                  </div>
-                  <div class="col-sm-2 section-time">
-                    <div class="input-group">
-                      <div class="bootstrap-timepicker">
-                        <%= f.text_field :section_time, multiple: true, class: 'form-control event-timepicker', autofocus: true, required: true, placeholder: "9:00", value: section.event_time %>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              <% end %>
-            </div>
-
             <div class="form-group">
-              <%= f.label :attachments, class: 'col-sm-3 control-label' %>
-              <div class="col-sm-8">
-                <div class="form-control">
-                  <%= f.file_field :attachments, type: :file, multiple: true %>
-                </div>
-              </div>
-            </div>
-
-            <div class="form-group">
-              <%= f.label :location, class: 'col-sm-3 control-label' %>
-              <div class="col-sm-8">
+              <%= f.label :location, class: 'col-sm-2 control-label' %>
+              <div class="col-sm-6">
                 <%= f.text_field :location, class: 'form-control', autofocus: true, required: true, placeholder: 'ชื่อสถานที่, ถนน, ซอย'  %>
               </div>
             </div>
+
 
             <style>
               /*html, body {
@@ -143,7 +100,7 @@
               }
             </style>
             <div class="row">
-              <div class="col-sm-12">
+              <div class="col-md-11">
                 <div class="card-box">
                   <h4 class="m-t-0 m-b-20 header-title"><b>Map</b></h4>
                   <!-- <div id="gmaps-overlay" class="gmaps"></div> -->
@@ -192,12 +149,17 @@
               function initAutocomplete() {
 
                 var map = new google.maps.Map(document.getElementById('map'), {
-                  center: { lat: 13.7563309, lng: 100.50176510000006 },
+                  center: {lat: <%= @event.latitude %>, lng: <%= @event.longitude %>},
                   zoom: 13,
                   mapTypeId: google.maps.MapTypeId.ROADMAP
                 });
 
                 var markers = [];
+
+                map.addListener('idle', function(){
+                  addMarker(new google.maps.LatLng(<%= @event.latitude %>, <%= @event.longitude %>));
+                });
+                // addMarker(map);
 
                 // Create the search box and link it to the UI element.
                 var input = document.getElementById('pac-input');
@@ -293,37 +255,48 @@
               }
             </script>
         </div>
-        <div class="col-md-4">
-          <!-- <h5><b>True multi value</b></h5>
-          <p class="text-muted m-b-30 font-13">
-                Use a <code>&lt;select multiple /&gt;</code> as your input element for a tags input, to gain true multivalue support.
-                 Instead of a comma separated string, the values will be set in an array. Existing <code>&lt;option /&gt;</code>
-                 elements will automatically be set as tags. This makes it also possible to create tags containing a comma.
-          </p>
-          <div class="m-b-0">
-              <select multiple data-role="tagsinput">
-                  <option value="Amsterdam">Amsterdam</option>
-                  <option value="Washington">Washington</option>
-                  <option value="Sydney">Sydney</option>
-              </select>
-          </div> -->
-          <h5><b>Cover photo</b></h5>
-          <% @event.galleries.each do |g| %>
-            <div class="m-t-10">
-              <%= image_tag g.media(:thumb2x), width: '100%' %>
+
+        <div class="col-md-5">
+          <div class="form-group">
+            <%= f.label :picture, class: 'col-sm-2 control-label' %>
+            <div class="col-sm-10">
+              <div class="form-control">
+                <%= f.file_field :attachments, type: :file, multiple: true %>
+              </div>
+              <% @event.galleries.each do |x| %>
+              <div class="m-t-20">
+                <%= image_tag x.media(:thumb), width: '100%', height: :auto %>
+                <%= link_to('Delete', delete_attachment_admin_events_path(x.id), method: :delete) %>
+              </div>
+              <% end %>
             </div>
-          <% end %>
-          <div class="m-b-20"></div>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="row">
+        <div class="col-md-12">
+          <h4>2. Ticket Detail</h4>
+          <div id="ticket">
+            <% @event.sections.each do |x| %>
+              <%= f.fields_for :sections do |section| %>
+                <%= render 'section_datas', f: section, s: x  %>
+              <% end %>
+            <% end %>
+
+            <div class="links">
+              <%= link_to_add_association 'Add Ticket', f, :sections %>
+            </div>
+          </div>
+
         </div>
       </div>
 
       <div class="row">
-        <div class="col-lg-12 text-right">
+        <div class="col-lg-12">
           <button id="submitForm" type="submit" class="btn btn-primary waves-effect waves-light">
             Update
-          </button>
-          <button id="resetForm" type="reset" class="btn btn-default waves-effect waves-light m-l-5">
-            Cancel
           </button>
         </div>
       </div>
@@ -349,35 +322,37 @@
 <%= javascript_include_tag 'bootstrap-datepicker/dist/js/bootstrap-datepicker.min', 'data-turbolinks-track' => true %>
 <%= javascript_include_tag 'bootstrap-daterangepicker/daterangepicker', 'data-turbolinks-track' => true %>
 
-<script>
+<!-- Parsleyjs -->
+<%= javascript_include_tag 'components/parsley', 'data-turbolinks-track' => true %>
+
+<!-- Dropzone js -->
+<%#= javascript_include_tag 'dropzone/dist/dropzone', 'data-turbolinks-track' => true %>
+<!--
+<script type="text/javascript">
+  var uploader = new Dropzone('#event_attachments');
+  uploader.on('success', function( file, resp ){
+    console.log(file)
+  });
+</script> -->
+<script type="text/javascript">
 
   jQuery(document).ready(function() {
 
-    var max_fields      = 10; //maximum input boxes allowed
-    var wrapper         = $(".section-wrap:last"); //Fields wrapper
-    var add_button      = $("#add-more-field"); //Add button ID
-    var sectionName      = $(".section-name");
-    var sectionPrice     = $(".section-price");
-    var sectionDate      = $(".section-date");
-    var sectionTime      = $(".section-time");
+    $('form').parsley();
+    picker_init();
 
-    var x = 1; //initlal text box count
-    $(add_button).click(function(e){ //on add input button click
-      e.preventDefault();
-      if(x < max_fields){ //max input box allowed
-        x++; //text box increment
-        // $(wrapper).append('<div><input type="text" name="mytext[]"/><a href="#" class="remove_field">Remove</a></div>'); //add input box
-        $(wrapper).clone().appendTo($('.section:last'));
-        // $(wrapper).append('<div class="col-sm-1"><a href="#" class="remove_field">X</a></div>');
+
+    $('.add_fields').click(function(){
+      setTimeout(function(){
         picker_init();
-      }
+      }, 0);
     });
 
-    $(wrapper).on("click",".remove_field", function(e){ //user click on remove text
-      e.preventDefault(); $(this).parent('div').remove(); x--;
-    })
-
-    picker_init();
+    // $('.remove_fields').click(function(){
+      // setTimeout(function(){
+      //   picker_init();
+      // }, 0);
+    // });
   });
 
   function picker_init(){
@@ -395,21 +370,3 @@
 
 </script>
 
-<!-- Parsleyjs -->
-<%#= javascript_include_tag 'parsleyjs/dist/parsley.min', 'data-turbolinks-track' => true %>
-<script type="text/javascript" src="//cdn.bootcss.com/parsley.js/2.4.3/parsley.min.js"></script>
-<script type="text/javascript">
-  $(document).ready(function() {
-    $('form').parsley();
-  });
-</script>
-
-<!-- Dropzone js -->
-<%#= javascript_include_tag 'dropzone/dist/dropzone', 'data-turbolinks-track' => true %>
-<!--
-<script type="text/javascript">
-  var uploader = new Dropzone('#event_attachments');
-  uploader.on('success', function( file, resp ){
-    console.log(file)
-  });
-</script> -->
