--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -22,7 +22,13 @@
           <tbody>
             <% @events.each do |event| %>
               <tr>
-                <td><%= link_to (image_tag event.galleries.first.try(:media, :thumb), width: '100'), edit_admin_event_path(event.id), target: '_self' %></td>
+                <td>
+                  <% if event.galleries.present? %>
+                    <%= link_to (image_tag event.galleries.first.try(:media, :thumb), width: '100'), edit_admin_event_path(event.id), target: '_self' %>
+                  <% else %>
+                    NULL
+                  <% end %>
+                </td>
                 <td><%= link_to event.title, edit_admin_event_path(event.id), target: '_self' %></td>
                 <td><%= event.category.try(:title) %></td>
                 <td><%= "#{event.user.try(:first_name)} #{event.user.try(:last_name)}" %></td>
