--- a/app/assets/stylesheets/client/core.sass
+++ b/app/assets/stylesheets/client/core.sass
@@ -7,6 +7,9 @@ body
   padding-bottom: 3rem
   color: #5a5a5a
 
+.wrapper
+  margin-top: 85px !important
+
 .m-b-60
   margin-bottom: 60px
 .carousel
