--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -22,7 +22,10 @@
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
-                  <h4 class="modal-title text-center" id="myModalLabel"><%= @event.title %></h4>
+                  <h4 class="modal-title text-center" id="myModalLabel">
+                    <%= @event.title %>
+                  </h4>
+                  <%= client_event_payment_path(@event) %>
                 </div>
                 <div class="modal-body">
                   <table width="100%">
