--- a/app/views/layouts/daydash.html.erb
+++ b/app/views/layouts/daydash.html.erb
@@ -25,7 +25,7 @@
     <% if params[:controller].eql?('client/events') %>
       <% if params[:action].eql?('index') %>
         <%= render partial: "layouts/parts/carousel_index" %>
-      <% else %>
+      <% elsif params[:action].eql?('show') %>
         <%= render partial: "layouts/parts/carousel_show" %>
       <% end %>
     <% end %>
