--- a/app/views/client/events/payment.html.erb
+++ b/app/views/client/events/payment.html.erb
@@ -5,7 +5,7 @@
       <div class="col-sm-12">
         <div class="card">
           <%= link_to client_event_path(@event.id) do %>
-            <%= image_tag @event.galleries.first.media(:thumb), width: '100%', height: :auto, class: 'card-img-top',
+            <%= image_tag @event.galleries.first.try(:media, :thumb), width: '100%', height: :auto, class: 'card-img-top',
             'data-src': "holder.js/100px180/", 'data-holder-rendered':"true"  %>
           <% end %>
           <div class="card-block">
