--- a/app/views/client/events/index.html.erb
+++ b/app/views/client/events/index.html.erb
@@ -22,8 +22,12 @@
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="card">
             <%= link_to client_event_path(event.id) do %>
-              <%= image_tag event.galleries.first.try(:media, :thumb), width: '100%', height: :auto, class: 'card-img-top',
+              <% if event.galleries.present? %>
+                <%= image_tag event.galleries.first.try(:media, :thumb), width: '100%', height: :auto, class: 'card-img-top',
               'data-src': "holder.js/100px180/", 'data-holder-rendered':"true"  %>
+              <% else %>
+                NULL
+              <% end %>
             <% end %>
             <div class="card-block">
               <h4 class="card-title text-left">
